# rust-edu

./: CLAUDE.md  CODEX.md  CONVERSION_FRAMEWORK_SUMMARY.md  CONVERSION_PROGRESS.md  Cargo.toml  LAB_CONVERSION_GUIDE.md  QUICK_REFERENCE.md  README.md  RUST_BASICS.md
01-variables-types/: README.md
01-variables-types/src/: solution.rs
01-variables-types/tests/: integration_test.rs
02-ownership-borrowing/: README.md
03-collections-basics/: README.md
03-collections-basics/src/: lib.rs  main.rs
03-collections-basics/tests/: integration_test.rs
04-structs-methods/: Cargo.toml
04-structs-methods/src/: lib.rs  main.rs
04-structs-methods/tests/: integration_test.rs
05-error-handling/: Cargo.toml  README.md
05-error-handling/data/: sample.txt
05-error-handling/src/: lib.rs
06-traits-basics/src/: lib.rs  main.rs  solution.rs
06-traits-basics/tests/: integration_test.rs
07-sha256-hashing/src/: main.rs  solution.rs
07-sha256-hashing/tests/: integration_test.rs
08-merkle-tree/: Cargo.toml  README.md
08-merkle-tree/src/: main.rs
09-simple-blockchain/: Cargo.toml  README.md
09-simple-blockchain/src/: lib.rs  main.rs  solution.rs
09-simple-blockchain/tests/: integration_test.rs
10-transaction-validation/: Cargo.toml  README.md
10-transaction-validation/src/: lib.rs  solution.rs
10-transaction-validation/tests/: integration_test.rs
examples/: CONVERSION_EXAMPLE.md
labs/01-variables-types/: Cargo.toml
labs/02-ownership-borrowing/: Cargo.toml
labs/03-collections-basics/: Cargo.toml  README.md
labs/04-structs-methods/: README.md
labs/05-error-handling/: README.md
labs/06-traits-basics/: Cargo.toml  README.md
labs/07-sha256-hashing/: Cargo.toml  README.md
labs/08-merkle-tree/: README.md
labs/09-simple-blockchain/: README.md
labs/10-transaction-validation/: README.md
labs/11-control-flow/: Cargo.toml
labs/12-enums-pattern-matching/: Cargo.toml  README.md
labs/13-generics-bounds/: Cargo.toml  README.md
labs/14-utxo-model/: Cargo.toml
labs/15-lifetimes-borrow-checker/: Cargo.toml  README.md
labs/16-collections-iterators/: Cargo.toml
labs/17-closures-iterators/: Cargo.toml
labs/18-modules-crates/: Cargo.toml
labs/19-smart-pointers/: Cargo.toml
labs/20-multithreading-basics/: Cargo.toml  README.md
labs/21-async-basics/: Cargo.toml  README.md
labs/22-chat-server/: Cargo.toml
labs/23-testing-benchmarking/: Cargo.toml
labs/25-transaction-pool/: Cargo.toml  README.md
labs/26-consensus-simulation/: Cargo.toml
labs/27-gui-egui/: Cargo.toml  README.md
labs/28-web-server-axum/: README.md
labs/29-thread-pool/: Cargo.toml  README.md
labs/30-lock-free-structure/: Cargo.toml  README.md
labs/31-key-value-store/: Cargo.toml  README.md
labs/32-basic-vm/: Cargo.toml  README.md
labs/33-message-bus/: Cargo.toml  README.md
labs/34-lru-cache/: Cargo.toml  README.md
labs/35-parallel-processing/: Cargo.toml  README.md
labs/36-interpreter/: Cargo.toml  README.md
labs/37-command-runner/: Cargo.toml  README.md
labs/38-memmap-search/: Cargo.toml  README.md
labs/39-order-book/: Cargo.toml  README.md
labs/40-task-scheduler/: Cargo.toml  README.md
labs/41-cli-todo/: Cargo.toml
labs/42-plugin-system/: Cargo.toml  README.md
labs/43-file-encryption/: Cargo.toml  README.md
labs/44-web-scraper/: Cargo.toml  README.md
labs/45-csv-to-json/: Cargo.toml
labs/46-declarative-macros/: Cargo.toml
labs/47-operator-overloading/: Cargo.toml
labs/48-proof-of-work/: Cargo.toml
labs/49-digital-signatures/: Cargo.toml  README.md
labs/50-wallet-cli/: Cargo.toml  README.md
labs/50-wallet-cli/src/: lib.rs  main.rs  solution.rs
labs/50-wallet-cli/tests/: integration_test.rs
labs/51-concurrent-crawler/: Cargo.toml
labs/52-blockchain-node/: Cargo.toml  README.md
labs/53-hft-trading-bot/: Cargo.toml
labs/54-variables-types-alternative/: Cargo.toml
labs/55-ownership-borrowing-alternative/: Cargo.toml
labs/56-structs-methods-alternative/: Cargo.toml  README.md
labs/57-06-traits-interfaces-alternative/: Cargo.toml  README.md
labs/57-traits-interfaces-alternative/: README.md
labs/58-error-handling-alternative/: Cargo.toml  README.md
labs/59-merkle-tree-alternative/: Cargo.toml  README.md
labs/60-simple-blockchain-alternative/: Cargo.toml  README.md
rust-50x-minis/: README.md
rust-50x-minis/01-variables-types/: README.md
rust-50x-minis/02-control-flow/: README.md
rust-50x-minis/03-ownership-borrowing/: README.md
rust-50x-minis/05-enums-pattern-matching/: README.md
rust-50x-minis/07-generics-bounds/: README.md
rust-50x-minis/09-merkle-tree/: README.md
rust-50x-minis/10-simple-blockchain/: README.md
rust-50x-minis/11-utxo-model/: README.md
rust-50x-minis/13-collections-iterators/: README.md
rust-50x-minis/14-closures-iterators/: README.md
rust-50x-minis/15-modules-crates/: README.md
rust-50x-minis/16-smart-pointers/: README.md
rust-50x-minis/19-chat-server/: README.md
rust-50x-minis/20-testing-benchmarking/: README.md
rust-50x-minis/21-cargo-features/: Cargo.toml  README.md
rust-50x-minis/21-cargo-features/src/: main.rs
rust-50x-minis/24-gui-egui/: Cargo.toml
scripts/: convert_lab.sh
templates/: README.md.template  integration_test.rs.template  lib.rs.template  solution.rs.template
(+267 files in other folders)
