[workspace]
members = [
    "labs/01-variables-types",
    "labs/02-ownership-borrowing",
    "labs/03-collections-basics",
    "labs/04-structs-methods",
    "labs/05-error-handling",
    "labs/06-traits-basics",
    "labs/07-sha256-hashing",
    "labs/08-merkle-tree",
    "labs/09-simple-blockchain",
    "labs/10-transaction-validation",
    "labs/11-control-flow",
    "labs/12-enums-pattern-matching",
    "labs/13-generics-bounds",
    "labs/14-utxo-model",
    "labs/15-lifetimes-borrow-checker",
    "labs/16-collections-iterators",
    "labs/17-closures-iterators",
    "labs/18-modules-crates",
    "labs/19-smart-pointers",
    "labs/20-multithreading-basics",
    "labs/21-async-basics",
    "labs/22-chat-server",
    "labs/23-testing-benchmarking",
    "labs/24-cargo-features",
    "labs/25-transaction-pool",
    "labs/26-consensus-simulation",
    "labs/27-gui-egui",
    "labs/28-web-server-axum",
    "labs/29-thread-pool",
    "labs/30-lock-free-structure",
    "labs/31-key-value-store",
    "labs/32-basic-vm",
    "labs/33-message-bus",
    "labs/34-lru-cache",
    "labs/35-parallel-processing",
    "labs/36-interpreter",
    "labs/37-command-runner",
    "labs/38-memmap-search",
    "labs/39-order-book",
    "labs/40-task-scheduler",
    "labs/41-cli-todo",
    "labs/42-plugin-system",
    "labs/43-file-encryption",
    "labs/44-web-scraper",
    "labs/45-csv-to-json",
    "labs/46-declarative-macros",
    "labs/47-operator-overloading",
    "labs/48-proof-of-work",
    "labs/49-digital-signatures",
    "labs/50-wallet-cli",
    "labs/51-concurrent-crawler",
    "labs/52-blockchain-node",
    "labs/53-hft-trading-bot",
    "labs/54-01-variables-types-alternative",
    "labs/55-03-ownership-borrowing-alternative",
    "labs/56-04-structs-methods-alternative",
    "labs/57-06-traits-interfaces-alternative",
    "labs/58-08-error-handling-alternative",
    "labs/59-09-merkle-tree-alternative",
    "labs/60-10-simple-blockchain-alternative",
]

resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
authors = ["Rust Learner"]
license = "MIT"

[workspace.dependencies]
# NOTE: This repository uses only the Rust standard library (std)
# No external dependencies needed - perfect for offline learning!
#
# For blockchain projects (07-10), we use:
# - Manual SHA-256 implementation (educational)
# - Manual hex encoding (simple to understand)
# - Simplified crypto demonstrations
#
# In production, you would use:
# - sha2 crate for SHA-256
# - hex crate for encoding
# - ed25519-dalek for signatures
# - But we implement basics ourselves for learning!
